# IPC-Socket-CLI-Linux-Service

./: CMakeLists.txt  README.md  architecture.drawio  calculatord.service
scripts/: client.py  server.py
src/: calculator_client.cpp  calculator_server.cpp  ipc_socket.cpp  ipc_socket.hpp  server.cpp
